--- a/main2.css
+++ b/main2.css
@@ -6,35 +6,26 @@ img {
 }
 
 header{
-	top: 0;
-	position: static;
-	padding-bottom: 50px;
-	background-color: white;
-	width: 100%;
-	padding: 0;
-	margin: 0 auto;
+  overflow: hidden;
+  background-color: white;
+  padding: 20px 10px;
 }
 
-ul{
+header ul{
 	list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    padding-bottom: 30px;
-    margin-bottom: 30px;
+
 }
 
-li {
+header li {
 	float: right;
 	padding: 10px 10px;
 	margin:10px 10px;
 }
 li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 10px 10px;
-    text-decoration: none;
+
 }
 
 h1{
@@ -66,5 +57,6 @@ footer{
     left: 0;
     bottom: 0;
     width: 100%;
+
 
 }
