--- a/main2.css
+++ b/main2.css
@@ -9,6 +9,8 @@ header{
   overflow: hidden;
   background-color: white;
   padding: 20px 10px;
+  position: static;
+  top: 0;
 }
 
 header ul{
@@ -56,7 +58,4 @@ footer{
 	position: fixed;
     left: 0;
     bottom: 0;
-    width: 100%;
-
-
 }
